reduced width to prevent horizontal scrolling in full page view

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,5 @@
   flex-direction: column;
   justify-content: center;
   height: 98vh;
+  width: 95vw;
 }
